--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     
     </section>
     <section id="icones">
-        <a href="#" target="tela" rel="noopener noreferrer"><img src="img/imagens/logo-home.jpg" alt="logo-home"></a>
+        <a href="home.html" target="tela" rel="noopener noreferrer"><img src="img/imagens/logo-home.jpg" alt="logo-home"></a>
 
           <a href="github.html" target="tela"><img src="img/imagens/logo-github.jpg" alt="logo-github"></a>
           
-          <a href="#" rel="noopener noreferrer"><img src="img/imagens/logo-instagram.jpg" alt="logo-instagram"></a>
+          <a href="insta.html" target="tela" rel="noopener noreferrer"><img src="img/imagens/logo-instagram.jpg" alt="logo-instagram"></a>
 
-          <a href="#" rel="noopener noreferrer"><img src="img/imagens/logo-linkedin.png" alt="logo-linkedin"></a>
+          <a href="linkedin.html" target="tela" rel="noopener noreferrer"><img src="img/imagens/logo-linkedin.png" alt="logo-linkedin"></a>
     </section>
    </main>
 </body>
