--- a/insta.html
+++ b/insta.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
-    <title>github</title>
+    <title>instagran</title>
 </head>
 <body>
-    <img src="img/imagens/github.png" alt="imagem">
-    <a href="https://github.com/renatoslva" target="_blank"> Acesse!!</a>
+   <img src="img/imagens/instagram.png"  alt="instagran">
+   <a href="https://www.instagram.com/renatoslvaproenca" target="_blank">ACESSA</a>
 </body>
 </html>
